cs form select box layout issue for ie9

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -24068,6 +24068,7 @@ body.chin .fwd-savie-wrapper .teaser-confirmation .wa_btn, body.chin .fwd-savie-
 	border-right: 25px solid transparent;
 	background-color: #e8eaea;
 	padding-left: 16px;
+	width: 131% \9;
 }
 /* line 150, ../sass/partials/_et-cannot-apply-modal.scss */
 #cannot-apply-modal .modal-body form .input-items select.form-control,
